@@ -10,7 +10,6 @@ import java.nio.file.StandardOpenOption;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import javax.swing.undo.UndoManager;
 
@@ -27,19 +26,23 @@ import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.scene.control.ProgressIndicator;
 import javafx.scene.control.TreeItem;
+import javafx.scene.input.TransferMode;
 
 import org.jabref.gui.DialogService;
 import org.jabref.gui.StateManager;
-import org.jabref.gui.util.BackgroundTask;
+import org.jabref.gui.preferences.GuiPreferences;
 import org.jabref.gui.util.DirectoryDialogConfiguration;
 import org.jabref.gui.util.FileDialogConfiguration;
 import org.jabref.gui.util.FileNodeViewModel;
-import org.jabref.gui.util.TaskExecutor;
+import org.jabref.logic.externalfiles.DateRange;
+import org.jabref.logic.externalfiles.ExternalFileSorter;
 import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.preferences.CliPreferences;
+import org.jabref.logic.util.BackgroundTask;
 import org.jabref.logic.util.StandardFileType;
+import org.jabref.logic.util.TaskExecutor;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.util.FileUpdateMonitor;
-import org.jabref.preferences.PreferencesService;
 
 import de.saxsys.mvvmfx.utils.validation.FunctionBasedValidator;
 import de.saxsys.mvvmfx.utils.validation.ValidationMessage;
@@ -70,7 +73,7 @@ public class UnlinkedFilesDialogViewModel {
     private final ObservableList<ExternalFileSorter> fileSortList;
 
     private final DialogService dialogService;
-    private final PreferencesService preferences;
+    private final CliPreferences preferences;
     private BackgroundTask<FileNodeViewModel> findUnlinkedFilesTask;
     private BackgroundTask<List<ImportFilesResultItemViewModel>> importFilesBackgroundTask;
 
@@ -82,7 +85,7 @@ public class UnlinkedFilesDialogViewModel {
     public UnlinkedFilesDialogViewModel(DialogService dialogService,
                                         UndoManager undoManager,
                                         FileUpdateMonitor fileUpdateMonitor,
-                                        PreferencesService preferences,
+                                        GuiPreferences preferences,
                                         StateManager stateManager,
                                         TaskExecutor taskExecutor) {
         this.preferences = preferences;
@@ -99,10 +102,10 @@ public class UnlinkedFilesDialogViewModel {
                 taskExecutor);
 
         this.fileFilterList = FXCollections.observableArrayList(
-                new FileExtensionViewModel(StandardFileType.ANY_FILE, preferences.getFilePreferences()),
-                new FileExtensionViewModel(StandardFileType.HTML, preferences.getFilePreferences()),
-                new FileExtensionViewModel(StandardFileType.MARKDOWN, preferences.getFilePreferences()),
-                new FileExtensionViewModel(StandardFileType.PDF, preferences.getFilePreferences()));
+                new FileExtensionViewModel(StandardFileType.ANY_FILE, preferences.getExternalApplicationsPreferences()),
+                new FileExtensionViewModel(StandardFileType.HTML, preferences.getExternalApplicationsPreferences()),
+                new FileExtensionViewModel(StandardFileType.MARKDOWN, preferences.getExternalApplicationsPreferences()),
+                new FileExtensionViewModel(StandardFileType.PDF, preferences.getExternalApplicationsPreferences()));
 
         this.dateFilterList = FXCollections.observableArrayList(DateRange.values());
 
@@ -141,28 +144,32 @@ public class UnlinkedFilesDialogViewModel {
     }
 
     public void startImport() {
-        List<Path> fileList = checkedFileListProperty.stream()
-                                                     .map(item -> item.getValue().getPath())
-                                                     .filter(path -> path.toFile().isFile())
-                                                     .collect(Collectors.toList());
+        List<Path> fileList = checkedFileListProperty
+                .stream()
+                .map(TreeItem::getValue)
+                .map(FileNodeViewModel::getPath)
+                .filter(Files::isRegularFile)
+                .toList();
+
         if (fileList.isEmpty()) {
-            LOGGER.warn("There are no valid files checked");
+            LOGGER.warn("There are no valid files checked for import");
             return;
         }
         resultList.clear();
 
-        importFilesBackgroundTask = importHandler.importFilesInBackground(fileList)
-                                                 .onRunning(() -> {
-                                                     progressValueProperty.bind(importFilesBackgroundTask.workDonePercentageProperty());
-                                                     progressTextProperty.bind(importFilesBackgroundTask.messageProperty());
-                                                     taskActiveProperty.setValue(true);
-                                                 })
-                                                 .onFinished(() -> {
-                                                     progressValueProperty.unbind();
-                                                     progressTextProperty.unbind();
-                                                     taskActiveProperty.setValue(false);
-                                                 })
-                                                 .onSuccess(resultList::addAll);
+        importFilesBackgroundTask = importHandler
+                .importFilesInBackground(fileList, bibDatabase, preferences.getFilePreferences(), TransferMode.LINK)
+                .onRunning(() -> {
+                    progressValueProperty.bind(importFilesBackgroundTask.workDonePercentageProperty());
+                    progressTextProperty.bind(importFilesBackgroundTask.messageProperty());
+                    taskActiveProperty.setValue(true);
+                })
+                .onFinished(() -> {
+                    progressValueProperty.unbind();
+                    progressTextProperty.unbind();
+                    taskActiveProperty.setValue(false);
+                })
+                .onSuccess(resultList::addAll);
         importFilesBackgroundTask.executeWith(taskExecutor);
     }
 
@@ -170,12 +177,13 @@ public class UnlinkedFilesDialogViewModel {
      * This starts the export of all files of all selected nodes in the file tree view.
      */
     public void startExport() {
-        List<Path> fileList = checkedFileListProperty.stream()
-                                                     .map(item -> item.getValue().getPath())
-                                                     .filter(path -> path.toFile().isFile())
-                                                     .toList();
+        List<Path> fileList = checkedFileListProperty
+                .stream()
+                .map(item -> item.getValue().getPath())
+                .filter(Files::isRegularFile)
+                .toList();
         if (fileList.isEmpty()) {
-            LOGGER.warn("There are no valid files checked");
+            LOGGER.warn("There are no valid files checked for export");
             return;
         }
 
@@ -198,7 +206,7 @@ public class UnlinkedFilesDialogViewModel {
         } catch (IOException e) {
             LOGGER.error("Error exporting", e);
         }
-     }
+    }
 
     public ObservableList<FileExtensionViewModel> getFileFilters() {
         return this.fileFilterList;
