@@ -25,14 +25,14 @@ public final class Title {
         if (getWords().isEmpty()) {
             return Optional.empty();
         }
-        return Optional.of(getWords().get(0));
+        return Optional.of(getWords().getFirst());
     }
 
     public Optional<Word> getLastWord() {
         if (getWords().isEmpty()) {
             return Optional.empty();
         }
-        return Optional.of(getWords().get(getWords().size() - 1));
+        return Optional.of(getWords().getLast());
     }
 
     @Override
