@@ -14,7 +14,8 @@ import javafx.util.Pair;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.Field;
-import org.jabref.model.entry.field.FieldProperty;
+import org.jabref.model.entry.field.FieldFactory;
+import org.jabref.model.entry.field.InternalField;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -37,20 +38,18 @@ import static uk.ac.ed.ph.snuggletex.definitions.Globals.TEXT_MODE_ONLY;
  */
 public class LatexIntegrityChecker implements EntryChecker {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(SnuggleSession.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(LatexIntegrityChecker.class);
     private static final SnuggleEngine ENGINE = new SnuggleEngine();
     private static final SnuggleSession SESSION;
-    private static final ResourceBundle ERROR_MESSAGES = ENGINE.getPackages().get(0).getErrorMessageBundle();
+    private static final ResourceBundle ERROR_MESSAGES = ENGINE.getPackages().getFirst().getErrorMessageBundle();
     private static final Set<ErrorCode> EXCLUDED_ERRORS = new HashSet<>();
 
     static {
-        SnugglePackage snugglePackage = ENGINE.getPackages().get(0);
+        SnugglePackage snugglePackage = ENGINE.getPackages().getFirst();
         snugglePackage.addComplexCommand("textgreater", false, 0, TEXT_MODE_ONLY, null, null, null);
         snugglePackage.addComplexCommand("textless", false, 0, TEXT_MODE_ONLY, null, null, null);
         snugglePackage.addComplexCommand("textbackslash", false, 0, TEXT_MODE_ONLY, null, null, null);
         snugglePackage.addComplexCommand("textbar", false, 0, TEXT_MODE_ONLY, null, null, null);
-        // ENGINE.getPackages().get(0).addComplexCommandOneArg()
-              // engine.getPackages().get(0).addComplexCommandOneArg("text", false, ALL_MODES,LR, StyleDeclarationInterpretation.NORMALSIZE, null, TextFlowContext.ALLOW_INLINE);
 
         SESSION = ENGINE.createSession();
         SESSION.getConfiguration().setFailingFast(true);
@@ -62,10 +61,12 @@ public class LatexIntegrityChecker implements EntryChecker {
     @Override
     public List<IntegrityMessage> check(BibEntry entry) {
         return entry.getFieldMap().entrySet().stream()
-                    .filter(field -> !field.getKey().getProperties().contains(FieldProperty.VERBATIM))
+                    .filter(field -> FieldFactory.isLatexField(field.getKey()))
                     .flatMap(LatexIntegrityChecker::getUnescapedAmpersandsWithCount)
                     // Exclude all DOM building errors as this functionality is not used.
                     .filter(pair -> !pair.getValue().getErrorCode().getErrorGroup().equals(CoreErrorGroup.TDE))
+                    // Exclude TTEM03 error for citation key field
+                    .filter(pair -> !(pair.getValue().getErrorCode().equals(CoreErrorCode.TTEM03) && pair.getKey().equals(InternalField.KEY_FIELD)))
                     .filter(pair -> !EXCLUDED_ERRORS.contains(pair.getValue().getErrorCode()))
                     .map(pair ->
                             new IntegrityMessage(errorMessageFormatHelper(pair.getValue().getErrorCode(), pair.getValue().getArguments()), entry, pair.getKey()))
@@ -87,7 +88,7 @@ public class LatexIntegrityChecker implements EntryChecker {
         // Retrieve the first error only because it is likely to be more meaningful.
         // Displaying all (subsequent) faults may lead to confusion.
         // We further get a slight performance benefit from failing fast (see static config in class header).
-        InputError error = SESSION.getErrors().get(0);
+        InputError error = SESSION.getErrors().getFirst();
         return Stream.of(new Pair<>(entry.getKey(), error));
     }
 
