@@ -3,6 +3,10 @@ package org.jabref.logic.journals;
 import java.io.Serializable;
 import java.util.Objects;
 
+/**
+ * The class provides functionality for managing journal abbreviations.
+ * <a href="https://docs.jabref.org/advanced/journalabbreviations">JabRef Journal Abbreviations Documentation</a>
+ */
 public class Abbreviation implements Comparable<Abbreviation>, Serializable {
 
     private static final long serialVersionUID = 1;
@@ -87,7 +91,7 @@ public class Abbreviation implements Comparable<Abbreviation>, Serializable {
 
     @Override
     public String toString() {
-        return String.format("Abbreviation{name=%s, abbreviation=%s, dotlessAbbreviation=%s, shortestUniqueAbbreviation=%s}",
+        return "Abbreviation{name=%s, abbreviation=%s, dotlessAbbreviation=%s, shortestUniqueAbbreviation=%s}".formatted(
                 this.name,
                 this.abbreviation,
                 this.dotlessAbbreviation,
