@@ -34,7 +34,7 @@ import static org.mockito.Mockito.mock;
 
 @FetcherTest
 @DisabledOnCIServer("eprint.iacr.org blocks with 500 when there are too many calls from the same IP address.")
-public class IacrEprintFetcherTest {
+class IacrEprintFetcherTest {
 
     private IacrEprintFetcher fetcher;
     private BibEntry abram2017;
@@ -43,7 +43,7 @@ public class IacrEprintFetcherTest {
     private BibEntry delgado2017;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         fetcher = new IacrEprintFetcher(mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS));
 
         abram2017 = new BibEntry(StandardEntryType.Misc)
@@ -51,10 +51,9 @@ public class IacrEprintFetcherTest {
                 .withField(StandardField.ABSTRACT, "dummy")
                 .withField(StandardField.AUTHOR, "Ittai Abraham and Dahlia Malkhi and Kartik Nayak and Ling Ren and Alexander Spiegelman")
                 .withField(StandardField.DATE, "2017-11-24")
-                .withField(StandardField.HOWPUBLISHED, "Cryptology ePrint Archive, Paper 2017/1118")
-                .withField(StandardField.NOTE, "\\url{https://eprint.iacr.org/2017/1118}")
+                .withField(StandardField.HOWPUBLISHED, "Cryptology {ePrint} Archive, Paper 2017/1118")
                 .withField(StandardField.TITLE, "Solida: A Blockchain Protocol Based on Reconfigurable Byzantine Consensus")
-                .withField(StandardField.URL, "https://eprint.iacr.org/2017/1118/20171124:064527")
+                .withField(StandardField.URL, "https://eprint.iacr.org/archive/versions/2017/1118/20171124:064527")
                 .withField(StandardField.VERSION, "20171124:064527")
                 .withField(StandardField.YEAR, "2017");
 
@@ -75,10 +74,9 @@ public class IacrEprintFetcherTest {
                 .withField(StandardField.AUTHOR, "Christof Beierle and Thorsten Kranz and Gregor Leander")
                 .withField(StandardField.DATE, "2017-02-17")
                 .withField(StandardField.DOI, "10.1007/978-3-662-53018-4_23")
-                .withField(StandardField.HOWPUBLISHED, "Cryptology ePrint Archive, Paper 2016/119")
-                .withField(StandardField.NOTE, "\\url{https://eprint.iacr.org/2016/119}")
-                .withField(StandardField.TITLE, "Lightweight Multiplication in GF(2^n) with Applications to MDS Matrices")
-                .withField(StandardField.URL, "https://eprint.iacr.org/2016/119/20170217:150415")
+                .withField(StandardField.HOWPUBLISHED, "Cryptology {ePrint} Archive, Paper 2016/119")
+                .withField(StandardField.TITLE, "Lightweight Multiplication in {GF}(2^n) with Applications to {MDS} Matrices")
+                .withField(StandardField.URL, "https://eprint.iacr.org/archive/versions/2016/119/20170217:150415")
                 .withField(StandardField.VERSION, "20170217:150415")
                 .withField(StandardField.YEAR, "2016");
 
@@ -87,16 +85,15 @@ public class IacrEprintFetcherTest {
                 .withField(StandardField.ABSTRACT, "dummy")
                 .withField(StandardField.AUTHOR, "Sergi Delgado-Segura and Cristina Pérez-Solà and Guillermo Navarro-Arribas and Jordi Herrera-Joancomartí")
                 .withField(StandardField.DATE, "2018-01-19")
-                .withField(StandardField.HOWPUBLISHED, "Cryptology ePrint Archive, Paper 2017/1095")
-                .withField(StandardField.NOTE, "\\url{https://eprint.iacr.org/2017/1095}")
-                .withField(StandardField.TITLE, "Analysis of the Bitcoin UTXO set")
-                .withField(StandardField.URL, "https://eprint.iacr.org/2017/1095/20180119:113352")
+                .withField(StandardField.HOWPUBLISHED, "Cryptology {ePrint} Archive, Paper 2017/1095")
+                .withField(StandardField.TITLE, "Analysis of the Bitcoin {UTXO} set")
+                .withField(StandardField.URL, "https://eprint.iacr.org/archive/versions/2017/1095/20180119:113352")
                 .withField(StandardField.VERSION, "20180119:113352")
                 .withField(StandardField.YEAR, "2017");
     }
 
     @Test
-    public void searchByIdWithValidId1() throws FetcherException {
+    void searchByIdWithValidId1() throws FetcherException {
         Optional<BibEntry> fetchedEntry = fetcher.performSearchById("Report 2017/1118 ");
         assertFalse(fetchedEntry.get().getField(StandardField.ABSTRACT).get().isEmpty());
         fetchedEntry.get().setField(StandardField.ABSTRACT, "dummy");
@@ -104,7 +101,7 @@ public class IacrEprintFetcherTest {
     }
 
     @Test
-    public void searchByIdWithValidId2() throws FetcherException {
+    void searchByIdWithValidId2() throws FetcherException {
         Optional<BibEntry> fetchedEntry = fetcher.performSearchById("iacr ePrint 2016/119");
         assertFalse(fetchedEntry.get().getField(StandardField.ABSTRACT).get().isEmpty());
         fetchedEntry.get().setField(StandardField.ABSTRACT, "dummy");
@@ -112,7 +109,7 @@ public class IacrEprintFetcherTest {
     }
 
     @Test
-    public void searchByIdWithValidIdAndNonAsciiChars() throws FetcherException {
+    void searchByIdWithValidIdAndNonAsciiChars() throws FetcherException {
         Optional<BibEntry> fetchedEntry = fetcher.performSearchById("some random 2017/1095 stuff around the id");
         assertFalse(fetchedEntry.get().getField(StandardField.ABSTRACT).get().isEmpty());
         fetchedEntry.get().setField(StandardField.ABSTRACT, "dummy");
@@ -120,42 +117,42 @@ public class IacrEprintFetcherTest {
     }
 
     @Test
-    public void searchByIdWithEmptyIdFails() {
+    void searchByIdWithEmptyIdFails() {
         assertThrows(FetcherException.class, () -> fetcher.performSearchById(""));
     }
 
     @Test
-    public void searchByIdWithInvalidReportNumberFails() {
+    void searchByIdWithInvalidReportNumberFails() {
         assertThrows(FetcherException.class, () -> fetcher.performSearchById("2016/1"));
     }
 
     @Test
-    public void searchByIdWithInvalidYearFails() {
+    void searchByIdWithInvalidYearFails() {
         assertThrows(FetcherException.class, () -> fetcher.performSearchById("16/115"));
     }
 
     @Test
-    public void searchByIdWithInvalidIdFails() {
+    void searchByIdWithInvalidIdFails() {
         assertThrows(FetcherException.class, () -> fetcher.performSearchById("asdf"));
     }
 
     @Test
-    public void searchForNonexistentIdFails() {
+    void searchForNonexistentIdFails() {
         assertThrows(FetcherException.class, () -> fetcher.performSearchById("2016/6425"));
     }
 
     @Test
-    public void testGetName() {
+    void getName() {
         assertEquals(IacrEprintFetcher.NAME, fetcher.getName());
     }
 
     @Test
-    public void searchByIdForWithdrawnPaperFails() {
+    void searchByIdForWithdrawnPaperFails() {
         assertThrows(FetcherException.class, () -> fetcher.performSearchById("1998/016"));
     }
 
     @Test
-    public void searchByIdWithOldHtmlFormatAndCheckDate() throws FetcherException {
+    void searchByIdWithOldHtmlFormatAndCheckDate() throws FetcherException {
         Optional<BibEntry> fetchedEntry = fetcher.performSearchById("1997/006");
         assertEquals(Optional.of("1997-05-04"), fetchedEntry.get().getField(StandardField.DATE));
     }
@@ -164,7 +161,7 @@ public class IacrEprintFetcherTest {
     @ParameterizedTest(name = "Fetch for id: {0}")
     @MethodSource("allNonWithdrawnIdsWithOldHtmlFormat")
     @Disabled("Takes a lot of time - should only be called manually")
-    public void searchByIdWithOldHtmlFormatWithoutDateCheck(String id) throws FetcherException {
+    void searchByIdWithOldHtmlFormatWithoutDateCheck(String id) throws FetcherException {
         Optional<BibEntry> fetchedEntry = fetcher.performSearchById(id);
         assertTrue(fetchedEntry.isPresent(), "Expected to get an entry for id " + id);
         assertNotEquals(Optional.empty(), fetchedEntry.get().getField(StandardField.DATE), "Expected non empty date field, entry is\n" + fetchedEntry.toString());
@@ -182,7 +179,7 @@ public class IacrEprintFetcherTest {
     private static List<String> getIdsFor(int year, int maxId) {
         List<String> result = new ArrayList<>();
         for (int i = 1; i <= maxId; i++) {
-            result.add(String.format("%04d/%03d", year, i));
+            result.add("%04d/%03d".formatted(year, i));
         }
         return result;
     }
@@ -201,19 +198,19 @@ public class IacrEprintFetcherTest {
     }
 
     @Test
-    public void getFulltextWithVersion() throws FetcherException, IOException {
+    void getFulltextWithVersion() throws FetcherException, IOException {
         Optional<URL> pdfUrl = fetcher.findFullText(abram2017);
         assertEquals(Optional.of("https://eprint.iacr.org/archive/2017/1118/1511505927.pdf"), pdfUrl.map(URL::toString));
     }
 
     @Test
-    public void getFulltextWithoutVersion() throws FetcherException, IOException {
+    void getFulltextWithoutVersion() throws FetcherException, IOException {
         Optional<URL> pdfUrl = fetcher.findFullText(abram2017noVersion);
         assertEquals(Optional.of("https://eprint.iacr.org/2017/1118.pdf"), pdfUrl.map(URL::toString));
     }
 
     @Test
-    public void getFulltextWithoutUrl() throws FetcherException, IOException {
+    void getFulltextWithoutUrl() throws FetcherException, IOException {
         BibEntry abram2017WithoutUrl = abram2017;
         abram2017WithoutUrl.clearField(StandardField.URL);
         Optional<URL> pdfUrl = fetcher.findFullText(abram2017WithoutUrl);
@@ -221,7 +218,7 @@ public class IacrEprintFetcherTest {
     }
 
     @Test
-    public void getFulltextWithNonIACRUrl() throws IOException {
+    void getFulltextWithNonIACRUrl() throws IOException {
         BibEntry abram2017WithNonIACRUrl = abram2017;
         abram2017WithNonIACRUrl.setField(StandardField.URL, "https://example.com");
         assertThrows(FetcherException.class, () -> fetcher.findFullText(abram2017WithNonIACRUrl));
